sass/03-globals/_loader.scss
#loader {
  min-height: -webkit-fill-available;
  position: fixed;
  left: 0;
  bottom: 0;
  right: 0;
  top: 0;
  background-color: $color_background;
  z-index: 1;
  height: calc(100% + $safe_area_inset_top);
  width: 100%;
  z-index: 1111;
  display: flex;
  align-items: center;
  justify-content: center;
}

.loader {
  &__overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: $color_background;
    z-index: 200;
    opacity: 0;
  }
  &__content {
    display: flex;
    align-items: center;
    flex-direction: column;
    row-gap: 80px;
    & svg {
      width: 50vw;
      height: 30vh;
      min-height: 120px;
      & path {
        opacity: 0;
      }
    }
  }
  &__circle {
    overflow: hidden;
    padding-top: 30px;
    &__bounce {
      height: 20px;
      width: 20px;
      background-color: var(--theme-color);
      border-radius: 50%;
      animation: bounce 1.5s ease infinite;
      animation-delay: 1.1s;
      opacity: 0;
    }
  }
  &__details {
    color: var(--theme-color);
    &__row {
      overflow: hidden;
      font-size: 12px;
      text-transform: uppercase;
      display: flex;
      flex-direction: column;
      align-items: center;
      & span {
        opacity: 0;
        font-family: $rivalSans;
        font-weight: $bold;
      }
    }
  }
}

.hidden {
  overflow: hidden;
}

